--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "expo": "~48.0.10",
     "expo-status-bar": "~1.4.4",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-native": "0.71.6",
+    "tailwindcss": "^3.3.1",
+    "expo-image": "~1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
